[package]
name = "reference_tool"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to fetch paper citations via INSPIRE-HEP API"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "reference_tool"
path = "src/lib.rs"

[[bin]]
name = "reference_tool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
regex = "1.0"
lazy_static = "1.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
